# food-spot-memory-bank

./: .gitignore  CMakeLists.txt
frontend/: app.py
frontend/static/: style.css
frontend/templates/: add_restaurant.html  alerts.html  dashboard.html  friends.html  index.html  layout.html  preferences.html  recommendations.html  restaurant_list.html
include/: alert_system.h  btree.h  disk_database.h  food_spot_structures.h  hashtable.h  recommendation_system.h  user.h  user_manager.h
src/: alert_system.cpp  disk_database.cpp  main_disk.cpp  main_multiuser.cpp  pybind_wrapper.cpp  recommendation_system.cpp  socket_server_main.cpp  user_manager.cpp
tests/: test_data_structures.cpp
web_ui/: index.html  server.py  style.css
